<?xml version="1.0" encoding="utf-8"?>

<!--
Tyler Allen
Last Updated: 09/29/14
String reference file.
-->


<resources>

    <string name="lfg">LFG</string>
    <string name="looking">Looking</string>
    <string name="forr">For</string>
    <string name="group">Group</string>

    <string name="app_name">LFG</string>
    <string name="f1">Friend</string>
    <string name="f2">Finder</string>
    <string name="email">Email Address</string>
    <string name="pass">Password</string>
    <string name="repeat_pass">Confirm Password</string>
    <string name="missing_acc">Don\'t have an account?</string>
    <string name="login">Log In</string>
    <string name="register">Sign Up</string>
    <string name="sign_up"><u>Sign Up!</u></string>

    <string name="settings">Settings</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="sound">Sound</string>
    <string name="pub_sched">Public Schedule</string>

    <string name="invite_settings">Allow Invites from Friends Only</string>

    <string name="event_priv_settings">Make Events Attending Public</string>

    <string name="key">AIzaSyC09UyL-EOUvClChCf6kMpSPqa0J6csCwM</string>

    <string name="eventname">Event Name</string>
    <string name="timedate">Time/Date filler</string>
    <string name="location">Location</string>
    <string name="information">Information:</string>
    <string name="placeholder_message">Placeholder Message</string>

    <string name="authority">edu.wcu.cs.agora.FriendFinder.ServerContentProvider</string>

    <string name="shared_prefs">edu.wcu.cs.agora.SHARED_PREFERENCES</string>


    <string name="create_group">Create Group</string>
    <string name="group_name">Group Name</string>
    <string name="group_description">Group Description</string>
    <string name="group_created">Group was created successfully.</string>
    <string name="group_update">Group was updated successfully.</string>
    <string name="group_deleted">Group has been deleted.</string>
    <string name="ok">OK</string>
    <string name="update">Update</string>
    <string name="event_update">Event was updated successfully.</string>
    <string name="event_created">Event was created successfully.</string>

    <string name="time">Time</string>
    <string name="date">Date</string>

    <string name="create_event">Create Event</string>
    <string name="search">Search</string>
    <string name="view_profile">View Profile</string>
    <string name="option_settings">Settings</string>
    <string name="logout">Logout</string>

    <string name="change_location">Move location here?</string>
    <string name="groupname">Group Name</string>

    <string name="members">Members</string>

    <string name="invite">Invite</string>

    <string name="select_date">Select Date</string>

    <string-array name="search_options_array">
        <item>Users</item>
        <item>Groups</item>
        <item>Likes</item>
    </string-array>

    <string-array name="genders">
        <item>Select</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string name="name">Full Name</string>

    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_event">Cancel Event</string>
    <string name="delete_sure">Are you sure you want to delete this group?</string>
    <string name="cancel_sure">Are you sure you want to cancel this event?</string>
    <string name="cancelled">Event cancelled successfully.</string>
    <string name="group_members">Members</string>
    <string name="join">Join</string>
    <string name="attend">Attend</string>

<string name="birthday">Birthday</string>

</resources>

