<?xml version="1.0" encoding="utf-8"?>

<!--
Tyler Allen
Last Updated: 09/29/14
Dynamically generated page representing an event.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="10dp"
              android:weightSum="100"
              android:background="@color/purple">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/eventname"
            android:textSize="60sp"
            android:textColor="@color/gold"
            android:id="@+id/friend"
            android:layout_weight="15"
            android:gravity="center"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/timedate"
            android:textSize="40sp"
            android:textColor="@color/gold"
            android:layout_weight="15"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:weightSum="100">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:layout_gravity="center"
                android:textSize="40sp"
                android:textColor="@color/gold"
                android:layout_weight="65"/>

        <!-- Placeholder for maps icon -->
        <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="35"
                android:layout_gravity="right"
                android:text="Map"/>
                <!--android:background="@drawable/go"-->

    </LinearLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/information"
            android:textSize="40sp"
            android:textColor="@color/gold"
            android:layout_weight="15"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="15dp"
            android:text="@string/placeholder_message"
            android:textSize="20sp"
            android:textColor="@color/gold"
            android:layout_weight="25"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_weight="10"
        android:layout_gravity="bottom"
        android:text="Edit Event"/>

</LinearLayout>