<?xml version="1.0" encoding="utf-8"?>

<!--
Tyler Allen
Last Updated: 09/29/14
Dynamically generated page representing an event.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="100"
              android:background="@color/purple">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="8"/>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="17"
            android:weightSum="100">

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/eventname"
                android:textSize="38sp"
                android:textColor="@color/gold"
                android:id="@+id/eventname"
                android:layout_weight="100"
                android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="4"/>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:weightSum="100">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"/>

        <EditText
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="30sp"
                android:textColor="@color/gold"
                android:layout_weight="50"/>
        <EditText
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="30sp"
                android:textColor="@color/gold"
                android:layout_weight="50"/>

    </LinearLayout>


    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="8"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:weightSum="100">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="30sp"
                android:textColor="@color/gold"
                android:layout_weight="60"/>

        <!-- Placeholder for maps icon -->
        <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:text="Map"
                android:id="@+id/map"/>
        <!--android:background="@drawable/go"-->

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="40sp"
                android:textColor="@color/gold"
                android:layout_weight="60"
                android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="4"/>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:weightSum="100">
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/information"
                android:textSize="30sp"
                android:textColor="@color/gold"
                android:layout_weight="90"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="14"
            android:weightSum="100">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_message"
                android:textSize="20sp"
                android:textColor="@color/gold"
                android:layout_weight="92"
                android:id="@+id/description"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="14"
            android:weightSum="100">
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="15"/>

        <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:text="@string/update"
                android:id="@+id/update"
                android:layout_gravity="center_horizontal"/>
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"/>

        <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:text="@string/delete"
                android:id="@+id/delete"
                android:layout_gravity="center_horizontal"/>

    </LinearLayout>


</LinearLayout>