<?xml version="1.0" encoding="utf-8"?>

<!--
Tyler Allen
Last Updated: 09/29/14
Dynamically generated page representing an event.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="100"
              android:background="@color/purple">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="8"/>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="13"
            android:weightSum="100">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/groupname"
                android:textSize="38sp"
                android:textColor="@color/gold"
                android:id="@+id/groupname"
                android:layout_weight="100"
                android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="8"/>


    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="8"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="8"/>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:weightSum="100">
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/information"
                android:textSize="30sp"
                android:textColor="@color/gold"
                android:layout_weight="90"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:weightSum="100">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"/>

        <TextView
                android:id="@+id/group_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_message"
                android:textSize="20sp"
                android:textColor="@color/gold"
                android:layout_weight="92"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:weightSum="100">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"/>


        <!-- Placeholder for maps icon -->
        <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="90"
                android:text="@string/members"/>
        <!--android:background="@drawable/go"-->

    </LinearLayout>





</LinearLayout>