<?xml version="1.0" encoding="utf-8"?>

<!--
Tyler Allen
Last Updated: 09/29/14
Registration page.
-->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="100"
              android:background="@color/lfgb">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="6"/>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:weightSum="100">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"/>
        <!-- placeholder until we get a graphic -->
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="60sp"
                android:textColor="@color/lfgw"
                android:textColorHint="@color/lfgw"
                android:layout_weight="60"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="5"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:weightSum="100">


        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/email"
                android:hint="@string/email"
                android:singleLine="true"
                android:ellipsize="start"
                android:textColorHint="@color/lfgw"
                android:gravity="center"
                android:layout_weight="60"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:weightSum="100">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/pass"
                android:hint="@string/pass"
                android:singleLine="true"
                android:textColorHint="@color/lfgw"
                android:ellipsize="start"
                android:gravity="center"
                android:layout_weight="60"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:weightSum="100">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/repeat_pass"
                android:hint="@string/repeat_pass"
                android:textColorHint="@color/lfgw"
                android:singleLine="true"
                android:ellipsize="start"
                android:gravity="center"
                android:layout_weight="60"/>

    </LinearLayout>


    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:weightSum="100">


        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/name"
                android:hint="@string/name"
                android:textColorHint="@color/lfgw"
                android:singleLine="true"
                android:ellipsize="start"
                android:gravity="center"
                android:layout_weight="60"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:padding="5dp"
            android:weightSum="10">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"/>

        <Spinner
                android:id="@+id/gender"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:padding="5dp"
            android:weightSum="10">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"/>

        <Button
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:text="@string/select_date"/>
    </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:weightSum="100">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"/>

        <!-- replace with custom buttons -->
        <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:id="@+id/register"
                android:clickable="true"
                android:scaleType="centerInside"
                android:text="@string/register"/>
        <!--android:background="@drawable/button1"-->


    </LinearLayout>

</LinearLayout>