<?xml version="1.0" encoding="utf-8"?>

<!--
Tyler Allen
Last Updated: 09/29/14
Page containing a user's privacy settings.
-->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="100"
              android:background="@color/lfgb">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="8"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="28"
            android:weightSum="100">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="23"/>
        <!-- placeholder until we get a graphic -->
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/privacy_settings"
                android:textSize="60sp"
                android:textColor="@color/lfgw"
                android:layout_weight="58"
                android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="8"/>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:weightSum="100"
            android:clickable="true">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"/>
        <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox"
                android:textSize="30dp"
                android:layout_weight="9"/>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pub_sched"
                android:textSize="30sp"
                android:textColor="@color/lfgw"
                android:layout_weight="58"
                android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="4"/>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="14"
            android:weightSum="100"
            android:clickable="true">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"/>
        <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:layout_weight="9"/>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/invite_settings"
                android:textSize="30sp"
                android:textColor="@color/lfgw"
                android:layout_weight="58"
                android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="4"/>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="14"
            android:weightSum="100"
            android:clickable="true">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"/>
        <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:layout_weight="9"/>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/event_priv_settings"
                android:textSize="30sp"
                android:textColor="@color/lfgw"
                android:layout_weight="58"
                android:layout_gravity="center"/>

    </LinearLayout>



</LinearLayout>